adjust card distance

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+  <div class="background"><img src="./assets/bg.jpg"></div>
   <div class="title">
     <h1>Data-Driven Design Toolkit</h1>
     <p>Welcome to the beta version of our 3D Toolkit. Tell us what you think!</p>
